--- a/solution10.html
+++ b/solution10.html
@@ -139,7 +139,7 @@ table img {
         <h2>Gallery Table View</h2>
         <table>
             <tr>
-                <td><img src="portrait.jpg" alt="Portrait of a person smiling"></td>
+                <td><img src="images/portrait.jpg" alt="Portrait of a person smiling"></td>
                 <td><img src="landscape.jpg" alt="Landscape view of mountains"></td>
                 <td><img src="event.jpg" alt="Wedding ceremony photo"></td>
             </tr>
@@ -160,3 +160,4 @@ table img {
 
 </body>
 </html>
+
