--- a/solution10.html
+++ b/solution10.html
@@ -115,12 +115,12 @@ table img {
 <main>
     <!-- Gallery Grid -->
     <section class="gallery-grid" aria-label="Photography gallery">
-        <img src="portrait.jpg" alt="Portrait of a person smiling" tabindex="0">
-        <img src="landscape.jpg" alt="Landscape view of mountains" tabindex="0">
-        <img src="event.jpg" alt="Wedding ceremony photo" tabindex="0">
-        <img src="portrait2.jpg" alt="Portrait with soft lighting" tabindex="0">
-        <img src="landscape2.jpg" alt="Forest scenery with sunlight" tabindex="0">
-        <img src="event2.jpg" alt="Festival celebration photo" tabindex="0">
+        <img src="images/portrait.jpg" alt="Portrait of a person smiling" tabindex="0">
+        <img src="images/landscape.jpg" alt="Landscape view of mountains" tabindex="0">
+        <img src="images/event.jpg" alt="Wedding ceremony photo" tabindex="0">
+        <img src="images/portrait2.jpg" alt="Portrait with soft lighting" tabindex="0">
+        <img src="images/landscape2.jpg" alt="Forest scenery with sunlight" tabindex="0">
+        <img src="images/event2.jpg" alt="Festival celebration photo" tabindex="0">
     </section>
 
     <!-- Categories -->
@@ -140,8 +140,8 @@ table img {
         <table>
             <tr>
                 <td><img src="images/portrait.jpg" alt="Portrait of a person smiling"></td>
-                <td><img src="landscape.jpg" alt="Landscape view of mountains"></td>
-                <td><img src="event.jpg" alt="Wedding ceremony photo"></td>
+                <td><img src="images/landscape.jpg" alt="Landscape view of mountains"></td>
+                <td><img src="images/event.jpg" alt="Wedding ceremony photo"></td>
             </tr>
             <tr>
                 <td>Portrait</td>
@@ -160,4 +160,5 @@ table img {
 
 </body>
 </html>
+
 
