--- a/solution9.html
+++ b/solution9.html
@@ -129,7 +129,7 @@ figcaption {
       <h3 id="healthcare-heading">Healthcare</h3>
       <p>In healthcare, AI helps doctors diagnose diseases faster and more accurately. AI-powered systems can analyze X-rays and MRI scans to detect early signs of illness.</p>
       <figure>
-        <img src="healthcare.jpg" alt="AI analyzing medical scans">
+        <img src="images/healthcare.jpg" alt="AI analyzing medical scans">
         <figcaption>Figure 1: AI used in medical diagnosis</figcaption>
       </figure>
     </section>
@@ -139,7 +139,7 @@ figcaption {
       <h3 id="transportation-heading">Transportation</h3>
       <p>Self-driving cars are one of the most famous examples of AI in action. These vehicles use sensors and algorithms to navigate roads safely.</p>
       <figure>
-        <img src="selfdrivingcars.jpg" alt="Self-driving car navigating city streets">
+        <img src="images/selfdrivingcars.jpg" alt="Self-driving car navigating city streets">
         <figcaption>Figure 2: Self-driving car powered by AI</figcaption>
       </figure>
     </section>
@@ -156,3 +156,4 @@ figcaption {
 
 </body>
 </html>
+
