--- a/solution6.html
+++ b/solution6.html
@@ -116,7 +116,7 @@
   <section class="profile-container" aria-label="Team Profiles">
 
     <article class="profile-card" role="region" aria-labelledby="john-name">
-      <img src="john.jpg" alt="Portrait of John Doe" class="profile-pic">
+      <img src="images/john.jpg" alt="Portrait of John Doe" class="profile-pic">
       <h2 id="john-name" class="name">John Doe</h2>
       <p class="title">Frontend Developer</p>
       <p class="contact">
@@ -126,7 +126,7 @@
     </article>
 
     <article class="profile-card" role="region" aria-labelledby="jane-name">
-      <img src="jane.jpg" alt="Portrait of Jane Smith" class="profile-pic">
+      <img src="images/jane.jpg" alt="Portrait of Jane Smith" class="profile-pic">
       <h2 id="jane-name" class="name">Jane Smith</h2>
       <p class="title">Graphic Designer</p>
       <p class="contact">
@@ -139,3 +139,4 @@
 
 </body>
 </html>
+
