--- a/solution2.html
+++ b/solution2.html
@@ -122,7 +122,7 @@
       <!-- Laptop 1 -->
       <article>
         <h3>Dell Inspiron</h3>
-        <img src="dell.png" alt="Dell Inspiron Laptop">
+        <img src="images/dell.png" alt="Dell Inspiron Laptop">
         <p>Price: &#8377;45,500</p>
         <a class="button" href="checkout.html" target="_blank" rel="noopener noreferrer" aria-label="Buy Dell Inspiron">Buy Now</a><br>
         <a class="button" href="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRtHECXYjs3OUOh3J3f4KrMb5PAqN-6zH0T9kjbW5s1RITjsPn31gNTfv9bkgpAMOiRrY_ae2H6ro3C2ycpFr0mH7IZ3rHtWqjeSewEesFklbxhXrlFT5gZ" 
@@ -132,7 +132,7 @@
       <!-- Laptop 2 -->
       <article>
         <h3>HP Pavilion</h3>
-        <img src="hp .png" alt="HP Pavilion Laptop">
+        <img src="images/hp .png" alt="HP Pavilion Laptop">
         <p>Price: &#8377;65,000</p>
         <a class="button" href="checkout.html" target="_blank" rel="noopener noreferrer" aria-label="Buy HP Pavilion">Buy Now</a><br>
         <a class="button" href="https://www.amazon.in/HP-i7-1355U-Anti-Glare-fd0468tu-fd0515tu/dp/B0DTTS34NW" 
@@ -142,7 +142,7 @@
       <!-- Laptop 3 -->
       <article>
         <h3>Lenovo ThinkPad</h3>
-        <img src="lenovo.png" alt="Lenovo ThinkPad Laptop">
+        <img src="images/lenovo.png" alt="Lenovo ThinkPad Laptop">
         <p>Price: &#8377;65,990</p>
         <a class="button" href="checkout.html" target="_blank" rel="noopener noreferrer" aria-label="Buy Lenovo ThinkPad">Buy Now</a><br>
         <a class="button" href="https://www.amazon.in/Lenovo-ThinkBook-Fingerprint-Aluminium-21MWA0AUIN/dp/B0FD8TSZQC" 
@@ -157,3 +157,4 @@
   </footer>
 </body>
 </html>
+
